refactor the graaljs integration to allow Java code to be called; updated the simulation extension and scripting to due to a change in the FlightConfiguration